@@ -1,3 +1,0 @@
-#!/bin/bash
-java -jar -Xmx512M OmegaT.jar $*
-
